# mcpwrap

./: .gitignore  README.md  pyproject.toml  spec.md
src/mcpwrap/: __init__.py
